<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map.start_view">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="96dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="210dp"
            android:layout_height="281dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="66dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next1"
            app:layout_constraintStart_toEndOf="@+id/imageViewStart"
            app:layout_constraintTop_toBottomOf="@+id/currentmoney"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/imageViewStart"
            android:layout_width="210dp"
            android:layout_height="280dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="66dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/back1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground_start" />

        <Button
            android:id="@+id/next1"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="166dp"
            android:background="@mipmap/ic_further_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/moveTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:text="moveTest"
            app:layout_constraintBottom_toTopOf="@+id/setmoney"
            app:layout_constraintEnd_toStartOf="@+id/imageViewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back1" />

        <Button
            android:id="@+id/back1"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="165dp"
            android:layout_marginBottom="166dp"
            android:background="@mipmap/ic_back_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moveTest"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/currentmoney"
            android:layout_width="180dp"
            android:layout_height="27dp"
            android:layout_marginStart="356dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_red_dark"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/würfeln"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="63dp"
            android:text="setmoney"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moveTest" />

        <Button
            android:id="@+id/würfeln"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/wuerfel"
            app:layout_constraintBottom_toTopOf="@+id/back1"
            app:layout_constraintEnd_toStartOf="@+id/imageViewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/figure4"
        android:layout_width="84dp"
        android:layout_height="89dp"
        app:srcCompat="@mipmap/ic_figure4_round"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="229dp" />

    <ImageView
        android:id="@+id/figure3"
        android:layout_width="84dp"
        android:layout_height="89dp"
        app:srcCompat="@mipmap/ic_figure3_round"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="97dp" />

    <ImageView
        android:id="@+id/figure2"
        android:layout_width="84dp"
        android:layout_height="89dp"
        app:srcCompat="@mipmap/ic_figure2_round"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="90dp" />

    <ImageView
        android:id="@+id/figure1"
        android:layout_width="84dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_figure1_round"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="229dp" />

</FrameLayout>